tests/cases/typecheck/enums/discriminants/explicitly_overflowing_discriminants.hash
// run=fail, stage=typecheck

#[repr("u8")]
Direction := enum(
    #[discriminant(0)]
    Up,
    #[discriminant(63)]
    Right,
    #[discriminant(256)]
    Down,
)
